--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     }
     h2 {
-      color: #005baa;
+        color: #333;
     }
     footer {
       text-align: center;
